spacing issue on contact form

--- a/app/style.scss
+++ b/app/style.scss
@@ -560,8 +560,8 @@ nav {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 40px;
-  margin-top: 180px;
+  margin-bottom: 60px;
+  margin-top: 240px;
 }
 
 .footer {
